# MediaPlayer-FFMPEG

./: ReadMe.md  gradlew  settings.gradle
app/: build.gradle
app/src/androidTest/java/godrick/media/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/godrick/media/player/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/godrick/media/player/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
medialib/: CMakeLists.txt  build.gradle
medialib/src/androidTest/java/godrick/media/medialib/: ExampleInstrumentedTest.java
medialib/src/main/: AndroidManifest.xml
medialib/src/main/cpp/: Callback2Java.cpp  Callback2Java.h  LogUtil.cpp  MediaEnter.cpp  cmdutils.h  config.h  ffplay.c
medialib/src/main/cpp/controller/: MediaController.cpp  MediaController.h
medialib/src/main/cpp/decode/: Audio.cpp  Audio.h  HWDecoder.cpp  HWDecoder.h  MediaPlayer.cpp  MediaPlayer.h  PlayState.cpp  PlayState.h  Queue.cpp  Queue.h  SLProcessor.cpp  SLProcessor.h  Video.cpp  Video.h
medialib/src/main/cpp/egl/: EGLHelper.cpp  EGLHelper.h  GLESRenderer.cpp  GLESRenderer.h  GLThread.cpp  GLThread.h  RenderES2.cpp  RenderES3.cpp  gl3stub.c  gl3stub.h
medialib/src/main/cpp/include/libavcodec/: avcodec.h  mediacodec.h  packet.h  vdpau.h  videotoolbox.h  vorbis_parser.h
medialib/src/main/cpp/include/libavfilter/: avfilter.h
medialib/src/main/cpp/include/libavformat/: avformat.h  avio.h
medialib/src/main/cpp/include/libavutil/: avutil.h  bprint.h  buffer.h  dovi_meta.h  encryption_info.h  ffversion.h  hwcontext_d3d11va.h  hwcontext_dxva2.h  hwcontext_vulkan.h  log.h  opt.h  spherical.h
medialib/src/main/cpp/include/libswresample/: swresample.h
medialib/src/main/cpp/include/x264/: x264.h
medialib/src/main/cpp/render/: YUVRenderer.cpp  YUVRenderer.h
medialib/src/main/cpp/soundtouch/: STTypes.h  TDStretch.cpp
medialib/src/main/cpp/util/: EGLUtil.cpp  EGLUtil.h  LogUtil.h  MediaCodecUtil.cpp  MediaCodecUtil.h  ThreadUtil.cpp  ThreadUtil.h
medialib/src/main/java/godrick/media/medialib/itfs/: IMediaPlayerListener.java  IRequestRenderListener.java
medialib/src/main/java/godrick/media/medialib/mediacodec/: MediaCodecController.java
medialib/src/main/java/godrick/media/medialib/natives/: NativeMediaEnter.java
medialib/src/main/java/godrick/media/medialib/player/: GLESRender.java  MediaPlayerView.java  NativeGLSurfaceView.java  TestSurface.java
medialib/src/main/java/godrick/media/medialib/utils/: MediaUtil.java
medialib/src/main/java/godrick/media/medialib/views/: EGLBaseSurfaceView.java
medialib/src/test/java/godrick/media/medialib/: ExampleUnitTest.java
